# deep-researcher

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/chat/: graph.py  models.py  nodes.py  research_graph.py  schemas.py  serializers.py  tools.py  urls.py  views.py  views_stream.py
backend/chat/migrations/: 0001_initial.py  0002_researchreport.py
backend/chat/rag/: embeddings.py  ingest.py  retriever.py
backend/config/: settings.py  urls.py
backend/documents/: models.py  urls.py  views.py
backend/documents/migrations/: 0001_initial.py
backend/tests/: conftest.py
backend/tests/evals/: conftest.py  eval_case.py  graders.py  harness.py  metrics.py  test_conversation_eval.py  test_deep_research_hitl_eval.py  test_end_to_end_eval.py  test_hitl_eval.py  test_rag_eval.py  test_research_eval.py  test_tool_selection_eval.py  transcript.py
backend/tests/evals/datasets/: conversation_quality.json  deep_research_hitl.json  rag_accuracy.json  research_quality.json  tool_selection.json
backend/tests/integration/: test_graph_execution.py  test_hitl_flow.py  test_rag_pipeline.py  test_research_subgraph.py  test_sse_streaming.py
backend/tests/unit/: test_nodes.py  test_rag_chunking.py  test_rag_embeddings.py  test_rag_ingest.py  test_rag_retriever.py  test_routing.py  test_schemas.py  test_serializers.py  test_stream_helpers.py  test_tools.py  test_views.py
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/components/: DocumentUpload.tsx  (+4 more)
(+11 files in other folders)
